--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,6 +40,7 @@
         <ul class="nav navbar-nav navbar-right" id="navbar">
           <li><%= link_to "Home", root_path %></li>
           <% if logged_in? %>
+            <%# <li><%= link_to "My Portcurio", porcs_path %>
             <li><%= link_to "Feed", microposts_path %></li>
             <li><%= link_to "Users", users_path %></li>
             <li><%= link_to "Help", help_path %></li>
