--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -12,6 +12,12 @@
         <% end %>
       </li>
       <li>
+        <%= link_to portcurio_user_path do %>
+          <%# <span data-feather="home"></span> %>
+          マイPortcurio
+        <% end %>
+      </li>
+      <li>
         <%= link_to microposts_path do %>
           <span data-feather="layers"></span>
           すべてのユーザの投稿
