--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
 
       <% if logged_in? %>
         <div class="row">
-          <%= render 'shared/sidebar' %>
+          <%= render 'layouts/sidebar' %>
           <div class="col-md-7 col-sm-7">
             <%= yield %>
           </div>
