--- a/app/views/microposts/_micropost_form.html.erb
+++ b/app/views/microposts/_micropost_form.html.erb
@@ -46,5 +46,5 @@
 </script>
 
 <% if @micropost.errors.any? %>
-  <%= javascript_pack_tag 'render/root' %>
+  <%= javascript_pack_tag 'render_root' %>
 <%end%>
