--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -54,7 +54,7 @@
         <% end %>
       </li>
       <li>
-        <%= link_to logout_path do %>
+        <%= link_to logout_path, method: :delete do %>
           <%# <span data-feather="users"></span> %>
           ログアウト
         <% end %>
