--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -41,6 +41,7 @@
           <li><%= link_to "Home", root_path %></li>
           <% if logged_in? %>
             <li><%= link_to "MyPortcurio", portcurio_user_path(current_user) %></li>
+            <li><%= link_to "Links", links_path %></li>
             <li><%= link_to "Feed", microposts_path %></li>
             <li><%= link_to "Users", users_path %></li>
             <li><%= link_to "Help", help_path %></li>
