--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -18,6 +18,12 @@
         <% end %>
       </li>
       <li>
+        <%= link_to links_path do %>
+          <%# <span data-feather="link"></span> %>
+          リンク集
+        <% end %>
+      </li>
+      <li>
         <%= link_to microposts_path do %>
           <span data-feather="layers"></span>
           すべてのユーザの投稿
